@@ -206,9 +206,9 @@ typedef enum _HklBinocularsQCustomSubProjectionEnum
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_TIMESTAMP,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_QPAR_QPER_TIMESTAMP,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_QPAR_QPER,
-        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_PHI_QX,
-        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_PHI_QY,
-        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_PHI_QZ,
+        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_PHIX_QX,
+        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_PHIY_QY,
+        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_PHIZ_QZ,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_STEREO,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_DELTALAB_GAMMALAB_SAMPLEAXIS,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_X_Y_Z,
@@ -225,6 +225,9 @@ typedef enum _HklBinocularsQCustomSubProjectionEnum
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_TIMESCAN0,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_Q_SCANNUMBER,
         HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_TTH_SCANNUMBER,
+        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_PHIX_Q_THETAX,
+        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_PHIY_Q_THETAY,
+        HKL_BINOCULARS_QCUSTOM_SUB_PROJECTION_PHIZ_Q_THETAZ,
         /* Add new your subprojection in the same order than the haskell order here */
         HKL_BINOCULARS_QCUSTOM_NUM_SUBPROJECTIONS,
 } HklBinocularsQCustomSubProjectionEnum;
